Fri Oct 15 12:54:11 1999 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>

	* test/testnet.cc: added the option '-m' for setting the max size
	  of the document.

Fri Oct 15 12:48:49 1999 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>

	* htdig/Server: added a flag for persistent connections.
	  It's set to true if the Server allows persistent connections.
	  It should be used when retrieving a document.

Fri Oct 15 12:45:42 1999 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>

	* defaults.cc: added the configuration attributes 'persistent_connections',
	  'max_retries' and 'head_before_get'. Their default values are
	  respectively true, 3, false.

Fri Oct 15 12:35:51 1999 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>

	* HtHTTP.cc: managing of uncompleted stream reading with persistent
	  connections (it occurs when max_doc_size is lower than the real
	  content length of the document, or when a document is not parsable
	  and we asked for it with a GET call).

	* Transport: _host variable is treated as a String, as Loic suggested.

Thu Oct 14 11:29:35 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/mktime.c, htlib/regex.c, htlib/regex.h, htlib/strptime.c:
	Updated with latest glibc versions. Merging from glibc sources may
	have introduced bugs, so this is the last merge before htdig-3.2.0b1.

Thu Oct 14 13:09:32 1999 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>

	* htnet/Transport: added statistics for open and close of connections
	  and changes of servers.
	  Fixed a bug in the SetConnection method, regarding the host comparison.
	  Added a method for showing the statistics on a given channel.

	* htnet/HtHTTP: More debug info available.
	  Added a method for showing the statistics on a given channel.

	* test/testnet.cc: now receives changes above.

Wed Oct 13 13:35:42 1999 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>

	* htdig/Document.h: added an HtHTTP pointer to the class.
